--- a/GVRP_Entry_API/src/main/resources/application.properties
+++ b/GVRP_Entry_API/src/main/resources/application.properties
@@ -6,8 +6,8 @@ spring.jackson.property-naming-strategy=SNAKE_CASE
 
 # Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/gvrp_db
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.username=root
+spring.datasource.password=sem_service
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
@@ -68,3 +68,7 @@ spring.optimization.engine.url=http://localhost:8081/api/v1
 spring.optimization.engine.timeout=900
 
 engine.api.key=
+
+geocoding.goong.api-key=
+geocoding.enabled=true
+geocoding.goong.uri=https://rsapi.goong.io/Geocode
